// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The LoginColumnLayout component, with one column, matches the snapshot 1`] = `
.c2 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c4 {
  margin-top: 20px;
  width: 200px;
}

.c3 {
  margin-top: 40px;
  width: 360px;
}

.c5 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c6 {
  padding: 0 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 480px;
}

@media screen and ( max-width:1024px ) {
  .c1:not(:only-child) {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Welcome back!
        </span>
      </h1>
      <p
        className="c6"
      >
        <span>
          Log in with your email address and password. If you don't remember your password, just reset it!
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`The LoginColumnLayout component, with two columns, matches the snapshot 1`] = `
.c2 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c4 {
  margin-top: 20px;
  width: 200px;
}

.c3 {
  margin-top: 40px;
  width: 360px;
}

.c5 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c6 {
  padding: 0 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 480px;
}

.c7 {
  margin-left: 48px;
}

@media screen and ( max-width:1024px ) {
  .c1:not(:only-child) {
    display: none;
  }
}

@media screen and ( max-width:1024px ) {
  .c7 {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Welcome back!
        </span>
      </h1>
      <p
        className="c6"
      >
        <span>
          Log in with your email address and password. If you don't remember your password, just reset it!
        </span>
      </p>
    </div>
  </div>
  <div
    className="c7"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Password changed successfully!
        </span>
      </h1>
      <p
        className="c6"
      >
        <span>
          Continue to MyYoast
        </span>
      </p>
    </div>
  </div>
</div>
`;
